# xiang

./: .gitignore  .prettierrc  eslint.config.mjs  index.html  package.json  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  uno.config.ts  vite.config.ts
.claude/: chess-notation-rules.md
.claude/skills/: design-theme.md
.claude/skills/design-theme/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.github/workflows/: release.yml
.husky/: pre-commit
devConfig/: uno.ts
scripts/: sync-version.mjs
src/: App.tsx  App.vue  index.tsx  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BoardParts.tsx  ChessMap.vue  ChessPiece.vue  ControlBox.tsx  ExplainBox.tsx  PanelBox.tsx  RecordBox.tsx  RecordList.vue  TitleBox.tsx  ViewBox.tsx
src/composables/: useElementSize.ts  useGameMsg.ts
src/data/: panelCon.ts  pieceCon.ts
src/hooks/: useNowDate.ts  usePageSize.ts
src/stores/: app.ts
src/styles/: index.css  index.less  index.scss  theme.css
src/types/: global.d.ts
src/utils/: check.ts  data.ts  eventBus.ts  game-msg.ts  index.ts  making-chess.ts  run-rule-data.ts  run-rule.ts
tests/components/: BoardParts.test.tsx
tests/composables/: useElementSize.test.ts  useGameMsg.test.ts
tests/stores/: app.test.ts
tests/utils/: check.test.ts  data.test.ts  game-msg.test.ts  index.test.ts  making-chess.test.ts  run-rule.test.ts
