[package]
name = "xiang-app"
version = "0.3.4"
description = "中国象棋"
authors = ["lhf6623"]
license = "MIT"
repository = "https://github.com/lhf6623/xiang"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"


